Reimplement repo-wide workspace/symbol based on git instead of BSP (#70)
Previously, workspace/symbol only searched for symbols of synced targets
via BSP. This meant that the feature didn't work at all until you
established a BSP connection, and until Metals had finished indexing the
synced targets.

Now, Metals implements workspace/symbols with a new index that is built
directly from reading Scala/Java files that are checked into Git. It
uses a new LMDB persistent key-value store to make this indexing step
incremental so that it's reasonably fast even in a large monorepo.

This change makes Metals workspace/symbol behave more similarly to other
LSP servers
like tsserver that only search for symbols that defined in the
*workspace* (not from external deps like node_modules/). Users who want
the old behavior can still access it through the custom "Metals: Search
symbol in workspace" command, which we should probably rename to
"Metals: Search Symbol From BSP" or something like that.

## Test Plan
There are e2e integration tests that run the indexer against an actual
git repo to assert the indexing is truly incremental, it invalidates
cache entries from deleted files, etc.

The manual testing plan for me is to add the following
`.vscode/settings.json`
```jsonc
  "metals.serverVersion": "1.5.1-SNAPSHOT",
  "metals.serverProperties": [
    // The final index is "only" ~300mb in memory, but the indexing step can use up more memory temporarily.
    // Metals must have more than 2gb ram even if only temporarily, we're dealing with a large build.
    "-Xmx6G",
    "-XX:+UseZGC",
    "-XX:ZUncommitDelay=30",
    "-XX:ZCollectionInterval=5",
    "-XX:+IgnoreUnrecognizedVMOptions",
    "-Dmetals.statistics=workspace-symbol",
    "-Djol.magicFieldOffset=true",
    "-Djol.tryWithSudo=true",
    "-Djdk.attach.allowAttachSelf",
    "-Dmetals.workspace-symbol-provider=mbt",
    "--add-opens=java.base/java.nio=ALL-UNNAMED",
    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
  ],
```
